--- a/app/package.json
+++ b/app/package.json
@@ -7,15 +7,16 @@
     "@blueprintjs/select": "^2.0.0",
     "@blueprintjs/table": "^2.0.0",
     "@tensorflow/tfjs": "^0.9.1",
+    "acorn": "^7.1.1",
     "ajv": "^6.3.0",
     "mathjs": "^4.0.1",
-    "plotly.js": "^1.35.2",
+    "plotly.js": "^1.52.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-plotly.js": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^3.4.0",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.5",
@@ -30,5 +31,17 @@
   "devDependencies": {
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
